# ZVM

./: .gitignore  CMakeLists.txt  CPU.c  CPU.h  Memory.c  Memory.h  Opcodes.h  README.md  ZVM.c  ZVM.h  debug.h  main.c  runtest.cmake  vm.inc
tests/: test.c
tests/VADD/: expected.txt  test  test.nasm
tests/VDIV/: test.nasm
tests/VLD/: expected.txt  test  test.nasm
tests/VLDB/: expected.txt  test  test.nasm
tests/VMOV/: expected.txt  test  test.nasm
tests/VMUL/: expected.txt  test
tests/VSET/: expected.txt  test  test.nasm
tests/VST/: expected.txt  test  test.nasm
tests/VSTB/: expected.txt  test  test.nasm
tests/VSUB/: expected.txt  test  test.nasm
